test/asm/max-errors.err
error: max-errors.asm(3):
    Expected constant expression: PC is not constant at assembly time
error: The maximum of 1 error was reached (configure with "-X/--max-errors"); assembly aborted!
